# gtest_minimal

./: CMakeLists.txt  main.cpp
src/: myfun.cpp  myfun.h
tests/: CMakeLists.txt
tests/src/: myfun_test.cpp
